# ChangeLog for dev-util/wingide
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 May 2009; James Rowe <jnrowe@gmail.com> wingide-3.1.8.1.ebuild:
  Removed redundant src_compile().

  06 May 2009; James Rowe <jnrowe@gmail.com> wingide-3.1.8.1.ebuild:
  Generate a .desktop file, thanks to Matt Leighton for reporting [d9c].

*wingide-3.1.8.1 (06 May 2009)

  06 May 2009; James Rowe <jnrowe@gmail.com> +wingide-3.1.8.1.ebuild,
  +files/wingide-3.1.8.1-use_system_gtk.patch, +metadata.xml:
  Initial ebuild, by me.
