@@ -2,14 +2,15 @@
 Hash: SHA1
 
 AUX wingide-3.1.8.1-use_system_gtk.patch 685 RMD160 e5624b02226d80036ac8599d1de7efd3862fb2d3 SHA1 dc0787fec5cfac7136f8d0af26c118408d271198 SHA256 0b7d5970edf143dc7071a576a9e4898a83a6b4ca52b648490fe30d92db073acf
+DIST html-lexer-crash-3.1.8p1-all.tar 225280 RMD160 608434968547a1f2b0f3db90685fad3519efd28a SHA1 37aa28604de3cf997412e826d7dd341e944512c7 SHA256 429134bb8e43c45e5fd047c3f74accbf3f2a6dfd7520499b25ddda76cc471b91
 DIST wingide-3.1.8-1-i386-linux.tar.gz 19202203 RMD160 9d590cfb7c45e7086b34d13dcc2e73e099675740 SHA1 110d657d2e69c0621b5635f14f69e3bf97ac29e5 SHA256 45838f171e0b57dfa6133e44559f6b77b28745a0ecb8009dc285c5fd14e2e9e4
-EBUILD wingide-3.1.8.1.ebuild 1394 RMD160 4ac8d3c4fde4a0a09f5b5cfcc9c9e9902c10e612 SHA1 4440ccb9fb21c9fe926cddbb9145497121548539 SHA256 9ee483cd5bb7f08d4e2d7506c7c00029e34752a3714c2116019be04d7b7fd1ce
-MISC ChangeLog 555 RMD160 1891331a8a11dda844e10f31ff65aa15e39dc543 SHA1 d16ce8f7536ce4b46c94a49ecc014ea677ee9912 SHA256 71f68c8c8496d42f1e8f8550b424b453510aa2ef4e0ff24d880a421c0631a1e6
+EBUILD wingide-3.1.8.1-r1.ebuild 1710 RMD160 a10a13375d8bce95cdd0a99280a0405c11610fb5 SHA1 e720163d08560b917bdb37d81f9f87a2ed77eefe SHA256 d0e93407334db96d4d7a23fb114d9d5017fe7859f34ae7dbc3fc85efc67161d8
+MISC ChangeLog 699 RMD160 1cfa7c65eb21e40d9fc77a1ba369db80d8be24b4 SHA1 356e43cf63b3cd12929b61b540afb84b53bbe07f SHA256 32134b7ec8e6e77f9a1c8676ad08d025293c2a235cedad1edfa910e45451db05
 MISC metadata.xml 257 RMD160 fe9fa90d8603ef0b613417b643f1fc79e4d495e2 SHA1 1a9e4dd72562d266b38995cda84506dffcf54964 SHA256 0139906c0783a6ac7151c524b397ff05d52330e3dfb130fad4c9e53848436313
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkoDzkwACgkQotN5XLOa4B7figCeOnk8icddfDczYhetpRhZUO7N
-Zg0An2YvrpqTxZFCvng9VzFkvPYTz0eF
-=aTJg
+iEYEARECAAYFAkoFKosACgkQotN5XLOa4B45HACgi5Ha9X7wlgSM9UjtwlDTkYs1
+7aMAn3JvYuq6m+UTK4aqMpmkaypTvl+1
+=tsFh
 -----END PGP SIGNATURE-----
