@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 May 2009; James Rowe <jnrowe@gmail.com> -wingide-3.1.8.1.ebuild,
+  wingide-3.1.8.1-r1.ebuild:
+  Update to include html-lexer-crash patch.
+
   08 May 2009; James Rowe <jnrowe@gmail.com> wingide-3.1.8.1.ebuild:
   Removed redundant src_compile().
 
